deploy/apps/nodejs-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
  namespace: nodejs-app
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nodejs-app
